# emulator_project

./: CMakeLists.txt  README.md  config.json
app/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/: configloader.h  deviceconfig.h  devicecontext.h  deviceinstance.h  ideviceemulator.h  pluginmanager.h  simulatorengine.h
core/src/: configloader.cpp  deviceinstance.cpp  pluginmanager.cpp  simulatorengine.cpp
plugins/: CMakeLists.txt
plugins/testreceiver/: CMakeLists.txt
plugins/testreceiver/include/: testreceiver.h
plugins/testreceiver/src/: testreceiver.cpp
plugins/testtransmitter/: CMakeLists.txt
plugins/testtransmitter/include/: testtransmitter.h
plugins/testtransmitter/src/: testtransmitter.cpp
